# garbage

./: .editorconfig  Cargo.toml  README.md  run-tests.sh  tests.Dockerfile
.github/workflows/: release.yml
src/: dir.rs  errors.rs  info.rs  lib.rs  main.rs  mounts.rs  ops.rs  strategy.rs  trashdir.rs  trashinfo.rs  utils.rs
src/ops/: empty.rs  list.rs  mod.rs  put.rs  restore.rs
